--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-minify": "^0.1.6",
     "jade": "~1.11.0",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
