using bower jquery

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular": "~1.4.8",
     "bootstrap": "~3.3.6",
     "animate.css": "~3.5.1",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "jquery": "~2.2.0"
   }
 }
