--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "bootstrap": "~3.3.6",
     "animate.css": "~3.5.1",
     "angular-ui-router": "~0.2.15",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "wow": "~1.1.2"
   }
 }
