--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha test/index.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -19,5 +20,9 @@
     "morgan": "~1.6.1",
     "nodemailer": "~1.8.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.4",
+    "supertest": "^1.1.0"
   }
 }
