http->https, added generals.io, defaulting projects to web

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "victor",
     "zhou"
   ],
-  "homepage": "http://www.victorzhou.com",
+  "homepage": "https://www.victorzhou.com",
   "moduleType": [],
   "private": true,
   "ignore": [
