Added start / rolling restart scripts

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,8 @@ http {
   include mime.types;
 
   upstream backend {
-    server localhost:8000 fail_timeout=0;
-    server localhost:8001 fail_timeout=0;
+    server localhost:8000 fail_timeout=3s;
+    server localhost:8001 fail_timeout=3s;
   }
 
   server {
