Added fasterjs-demo to nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,4 +23,13 @@ http {
       proxy_pass http://backend;
     }
   }
+
+  server {
+    listen 80;
+    server_name fasterjs-demo.victorzhou.com;
+
+    location / {
+      proxy_pass http://localhost:3000;
+    }
+  }
 }
