Update dependencies, added repo to package.json

--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "bower": "^1.7.2",
+    "bower": "^1.8.4",
     "cluster": "^0.7.7",
-    "compression": "^1.6.0",
-    "express": "^4.16.2",
+    "compression": "^1.7.2",
+    "express": "^4.16.3",
     "express-minify": "^0.1.6",
-    "mongoose": "^4.3.4",
+    "mongoose": "^4.13.12",
     "morgan": "~1.6.1",
     "nodemailer": "~1.8.0",
     "os": "^0.1.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.3.2"
   },
   "devDependencies": {
     "mocha": "^2.3.4",
     "supertest": "^1.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vzhou842/victorzhou.com.git"
   }
 }
