--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,11 @@ http {
 
   server {
     listen 80;
+    listen 443 ssl;
+    server_name victorzhou.com www.victorzhou.com;
+
+    ssl_certificate /etc/letsencrypt/live/victorzhou.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/victorzhou.com/privkey.pem;
 
     proxy_connect_timeout 5;
     proxy_send_timeout 5;
@@ -26,7 +31,11 @@ http {
 
   server {
     listen 80;
+    listen 443 ssl;
     server_name fasterjs-demo.victorzhou.com;
+
+    ssl_certificate /etc/letsencrypt/live/victorzhou.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/victorzhou.com/privkey.pem;
 
     location / {
       proxy_pass http://localhost:3000;
