--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "test": "mocha test/index.js"
   },
   "engines": {
-    "node": "8.9.4",
-    "npm": "5.6.0"
+    "node": "10.7.0",
+    "npm": "6.4.0"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.18.3",
     "bower": "^1.8.4",
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "express-minify": "^0.1.6",
     "mongoose": "^4.13.14",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.0",
     "nodemailer": "~1.8.0",
     "serve-favicon": "^2.5.0"
   },
