--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "express-minify": "^0.1.6",
     "mongoose": "^5.2.12",
     "morgan": "^1.9.0",
-    "nodemailer": "~1.8.0",
+    "nodemailer": "^4.6.8",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "mocha": "^2.3.4",
-    "supertest": "^1.1.0"
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
   },
   "repository": {
     "type": "git",
