--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha test/index.js"
+    "test": "mocha test/index.js --exit"
   },
   "engines": {
     "node": "10.7.0",
