Update nginx.conf for pei-visualizer

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,17 @@ http {
   server_tokens off;
   include mime.types;
 
-  upstream backend {
+  upstream victorzhou {
     server localhost:8000 fail_timeout=3s;
     server localhost:8001 fail_timeout=3s;
+  }
+
+  upstream fasterjs {
+    server localhost:3000;
+  }
+
+  upstream pei-visualizer {
+    server localhost:5000;
   }
 
   server {
@@ -25,7 +33,7 @@ http {
     proxy_read_timeout 5;
 
     location / {
-      proxy_pass http://backend;
+      proxy_pass http://victorzhou;
     }
   }
 
@@ -38,7 +46,16 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/victorzhou.com/privkey.pem;
 
     location / {
-      proxy_pass http://localhost:3000;
+      proxy_pass http://fasterjs;
+    }
+  }
+
+  server {
+    listen 80;
+    server_name pei-visualizer.com;
+
+    location / {
+      proxy_pass http://pei-visualizer;
     }
   }
 }
