--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,11 @@ http {
 
   server {
     listen 80;
-    server_name pei-visualizer.com;
+    listen 443 ssl;
+    server_name pei-visualizer.com www.pei-visualizer.com;
+
+    ssl_certificate /etc/letsencrypt/live/pei-visualizer.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pei-visualizer.com/privkey.pem;
 
     location / {
       proxy_pass http://pei-visualizer;
